# make_decision

./: .gitignore  Makefile  README.md  pyproject.toml
make_decision/: data_model.py  lambda_function.py
package/boto3-1.26.30.dist-info/: RECORD
package/boto3-1.26.57.dist-info/: RECORD
package/botocore-1.29.30.dist-info/: RECORD
package/botocore-1.29.57.dist-info/: RECORD
package/charset_normalizer-2.1.1.dist-info/: RECORD
package/charset_normalizer-3.0.1.dist-info/: RECORD
package/jmespath-1.0.1.dist-info/: RECORD
package/make_decision/: helper.py
package/make_decision-0.1.0.dist-info/: METADATA  RECORD  direct_url.json
