[tool.poetry]
name = "make-decision"
version = "0.1.0"
description = ""
authors = ["Oswaldo Gomez <osw.gom89@gmail.com>"]
readme = "README.md"
packages = [{include = "make_decision"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
boto3 = "^1.26.30"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"
types-requests = "^2.28.11.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
